fix waybar flickering

--- a/arch/waybar/style.css
+++ b/arch/waybar/style.css
@@ -8,8 +8,7 @@
 }
 
 window#waybar {
-    background: #353535;
-    opacity: 0.8;
+    background-color: alpha(#353535, 0.8); /* avoid opacity as described here: https://github.com/Alexays/Waybar/issues/3492 */
     color: #cdd6f4;
 }
 
